[gd_scene load_steps=18 format=2]

[ext_resource path="res://Asset/Fonts/NotoSansTC-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Quest Object/Event.gd" type="Script" id=2]
[ext_resource path="res://Asset/Image/Quest/Event/Event-05.png" type="Texture" id=3]
[ext_resource path="res://Asset/Image/Quest/Event/Event-03.png" type="Texture" id=4]
[ext_resource path="res://Asset/Image/Quest/Event/Event-06.png" type="Texture" id=5]
[ext_resource path="res://Asset/Image/Quest/Event/Event-07.png" type="Texture" id=6]
[ext_resource path="res://Asset/Image/Quest/Event/Event-08.png" type="Texture" id=7]
[ext_resource path="res://Asset/Image/Quest/Event/Event-01.png" type="Texture" id=8]
[ext_resource path="res://Asset/Image/Quest/Event/Event-02.png" type="Texture" id=9]
[ext_resource path="res://Asset/Image/Quest/Event/Event-04.png" type="Texture" id=10]
[ext_resource path="res://Asset/Image/Quest/Event/correct.png" type="Texture" id=11]
[ext_resource path="res://Asset/Image/Quest/Event/incorrect.png" type="Texture" id=12]
[ext_resource path="res://Asset/Sound/event_fail.mp3" type="AudioStream" id=13]
[ext_resource path="res://Asset/Sound/event_succeed.mp3" type="AudioStream" id=14]
[ext_resource path="res://Asset/Sound/event_show.mp3" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "timer",
"speed": 8.0
} ]

[node name="Event" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 544.0
margin_bottom = 960.0
color = Color( 1, 1, 1, 0.47451 )

[node name="Question" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -193.0
margin_right = 243.0
margin_bottom = -57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "很長很長很長很長的問題內文"
align = 1
valign = 1
autowrap = true

[node name="Answer1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.5
margin_top = -23.5
margin_right = 117.5
margin_bottom = 23.5
custom_fonts/font = SubResource( 2 )
text = "選項1"

[node name="Answer2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.5
margin_top = 56.5
margin_right = 117.5
margin_bottom = 103.5
custom_fonts/font = SubResource( 2 )
text = "選項2"

[node name="Answer3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.5
margin_top = 137.5
margin_right = 117.5
margin_bottom = 184.5
custom_fonts/font = SubResource( 2 )
text = "選項3"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 264, 776 )
scale = Vector2( 0.225411, 0.225411 )
frames = SubResource( 4 )
animation = "timer"

[node name="CorrectImage" type="Sprite" parent="."]
visible = false
position = Vector2( 264, 776 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="IncorrectImage" type="Sprite" parent="."]
visible = false
position = Vector2( 264, 776 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )

[node name="EventSucceedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="EventFailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="EventShowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="pressed" from="Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
